fix kanban dropdown overflow

--- a/frontend/less/espo/elements/dropdown.less
+++ b/frontend/less/espo/elements/dropdown.less
@@ -161,6 +161,12 @@ ul.dropdown-menu-with-icons {
     margin-right: 2px;
 }
 
+.fix-overflow {
+    .btn-group {
+        position: unset;
+    }
+}
+
 .dropdown-menu {
     .quick-search-list-item {
         input {
